--- a/index.html
+++ b/index.html
@@ -1,154 +1,107 @@
-<!-- index.html -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>S.T.E.P Guardian Monitoring — Realtime</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
-  <style>
-    :root{
-      --bg:#0d0d0d; --card:#141414; --accent:#FFD400; --text:#eaeaea;
-      --muted:#999; --ok:#4CAF50; --warn:#FFC107; --danger:#ff4d4d;
-    }
-    *{box-sizing:border-box;margin:0;padding:0;font-family:'Poppins',sans-serif}
-    body{background:var(--bg);color:var(--text);height:100vh;display:flex;flex-direction:column}
-    header{padding:16px 20px;background:linear-gradient(90deg,#000,#111);color:var(--accent);font-weight:700;display:flex;justify-content:space-between;align-items:center}
-    main{flex:1;display:grid;grid-template-columns:2fr 1fr;min-height:0}
-    #map{width:100%;height:100%}
-    .panel{background:var(--card);padding:20px;display:flex;flex-direction:column;gap:12px;border-left:2px solid #222;overflow:auto}
-    .title{font-size:20px;color:var(--accent);text-align:center;font-weight:700}
-    .info{background:#111;border:1px solid #222;padding:12px;border-radius:10px;display:flex;justify-content:space-between;align-items:center}
-    .info .val{color:var(--accent);font-weight:700}
-    .status{padding:10px;border-radius:8px;text-align:center;font-weight:700}
-    .safe{background:var(--ok);color:#000}
-    .warning{background:var(--warn);color:#000}
-    .alert{background:var(--danger);color:#000}
-    .btns{display:flex;gap:10px;margin-top:auto}
-    button{flex:1;padding:10px;border-radius:10px;border:none;background:var(--accent);font-weight:700;color:#000;cursor:pointer}
-    footer{text-align:center;padding:8px;color:var(--muted);font-size:13px;border-top:1px solid #222}
-    .leaflet-marker-icon{transition:transform .5s ease}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>S.T.E.P Guardian Tracker</title>
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<style>
+body{margin:0;font-family:'Poppins',sans-serif;background:#0b0b0b;color:#eee;}
+#map{height:100vh;width:100vw;}
+.info-panel{
+  position:absolute;top:10px;left:10px;width:300px;background:#1a1a1a;padding:20px;border-radius:12px;z-index:1000;
+  box-shadow:0 0 25px #FFD40080;border:2px solid #FFD400;
+}
+.info-panel h2{color:#FFD400;text-align:center;margin-bottom:10px;}
+.info-row{display:flex;justify-content:space-between;margin-bottom:8px;font-size:16px;}
+.status-pill{padding:8px;border-radius:8px;font-weight:700;text-align:center;}
+.safe{background:#4CAF50;color:#000;}
+.warning{background:#FFC107;color:#000;}
+.alert{background:#ff4d4d;color:#000;}
+#centerBtn{margin-top:10px;width:100%;padding:10px;border:none;background:#FFD400;color:#000;font-weight:700;border-radius:8px;cursor:pointer;}
+#centerBtn:hover{background:#ffe44d;}
+</style>
 </head>
 <body>
-  <header>
-    <div>👟 S.T.E.P Guardian Monitoring</div>
-    <div id="connectStatus" class="status safe">Connecting...</div>
-  </header>
+<div id="map"></div>
+<div class="info-panel">
+  <h2>STEP Guardian</h2>
+  <div class="info-row">Latitude: <span id="lat">—</span></div>
+  <div class="info-row">Longitude: <span id="lng">—</span></div>
+  <div class="info-row">Distance: <span id="distance">—</span> cm</div>
+  <div class="info-row">Status: <span id="status" class="status-pill safe">Waiting for GPS...</span></div>
+  <button id="centerBtn">📍 Center Map</button>
+</div>
 
-  <main>
-    <div id="map"></div>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script>
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
+  authDomain: "step-gps-tracker.firebaseapp.com",
+  databaseURL: "https://step-gps-tracker-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "step-gps-tracker",
+  storageBucket: "step-gps-tracker.firebasestorage.app",
+  messagingSenderId: "637274580153",
+  appId: "1:637274580153:web:7566f774dbf5ea4380a768"
+};
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
 
-    <div class="panel">
-      <div class="title">Device Information</div>
-      <div class="info"><div>Last Location:</div><div class="val" id="latlng">— , —</div></div>
-      <div class="info"><div>Last Update:</div><div class="val" id="lastUpdate">—</div></div>
-      <div class="info"><div>Distance:</div><div class="val" id="distance">— cm</div></div>
-      <div id="alertBox" class="status safe">✅ Safe</div>
-      <div class="btns">
-        <button id="centerBtn">📍 Center Map</button>
-        <button id="zoomBtn">🔍 Zoom</button>
-      </div>
-    </div>
-  </main>
+// Map setup
+const map = L.map('map').setView([13.9407,121.1641], 17);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  maxZoom:19, attribution:'© OpenStreetMap'
+}).addTo(map);
 
-  <footer>© S.T.E.P Guardian — Realtime Tracking</footer>
+// Marker & path
+const shoeIcon = L.divIcon({
+  html:'<div style="width:45px;height:45px;border-radius:50%;background:#FFD400;border:3px solid #000;display:flex;align-items:center;justify-content:center;box-shadow:0 0 15px #FFD400;"><span style="font-size:24px;">👟</span></div>',
+  iconSize:[45,45],iconAnchor:[22,22]
+});
+let marker = L.marker([13.9407,121.1641],{icon:shoeIcon}).addTo(map);
+let trail = L.polyline([], {color:'#FFD400',weight:4,opacity:0.8}).addTo(map);
 
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+// Elements
+const latEl=document.getElementById('lat');
+const lngEl=document.getElementById('lng');
+const distEl=document.getElementById('distance');
+const statusEl=document.getElementById('status');
+document.getElementById('centerBtn').onclick=()=>map.panTo(marker.getLatLng());
 
-  <script>
-  // ---------- Firebase config (use same as ESP) ----------
-  const firebaseConfig = {
-    apiKey: "AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
-    authDomain: "step-gps-tracker.firebaseapp.com",
-    databaseURL: "https://step-gps-tracker-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "step-gps-tracker",
-    storageBucket: "step-gps-tracker.firebasestorage.app",
-    messagingSenderId: "637274580153",
-    appId: "1:637274580153:web:7566f774dbf5ea4380a768"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.database();
+// Firebase realtime listener
+db.ref('shoe').on('value', snap=>{
+  const d = snap.val();
+  if(!d) return;
 
-  // ---------- Map init ----------
-  const defaultLat = 14.3, defaultLng = 121.4;
-  const map = L.map('map', { zoomControl:true }).setView([defaultLat, defaultLng], 16);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{ maxZoom:19 }).addTo(map);
+  const lat = d.latitude || 13.9407;
+  const lng = d.longitude || 121.1641;
+  const dist = d.distance;
+  const sos = d.sos;
 
-  // custom marker
-  const deviceIcon = L.divIcon({
-    html: '<div style="width:44px;height:44px;border-radius:50%;background:#FFD400;border:3px solid #000;display:flex;align-items:center;justify-content:center;font-size:20px;">👟</div>',
-    className:'', iconSize:[44,44], iconAnchor:[22,22]
-  });
-  let marker = L.marker([defaultLat, defaultLng], {icon:deviceIcon}).addTo(map).bindPopup('STEP Device');
+  // Update marker position
+  marker.setLatLng([lat,lng]);
+  map.panTo([lat,lng]);
+  trail.addLatLng([lat,lng]);
 
-  let path = [];
-  const line = L.polyline(path, { color:'#FFD400', weight:4, opacity:0.85 }).addTo(map);
+  latEl.textContent = lat.toFixed(6);
+  lngEl.textContent = lng.toFixed(6);
+  distEl.textContent = dist > 0 ? dist.toFixed(1) : '—';
 
-  // UI elements
-  const connectStatus = document.getElementById('connectStatus');
-  const latlngEl = document.getElementById('latlng');
-  const lastUpdateEl = document.getElementById('lastUpdate');
-  const distanceEl = document.getElementById('distance');
-  const alertBox = document.getElementById('alertBox');
-  const centerBtn = document.getElementById('centerBtn');
-  const zoomBtn = document.getElementById('zoomBtn');
-
-  centerBtn.addEventListener('click', ()=> { map.panTo(marker.getLatLng()); map.setZoom(18); });
-  zoomBtn.addEventListener('click', ()=> { map.setZoom(map.getZoom() === 18 ? 16 : 18); });
-
-  // ---------- listen to Firebase /shoe ----------
-  const shoeRef = db.ref('shoe');
-  shoeRef.on('value', async snap => {
-    const data = snap.val();
-    if (!data) {
-      connectStatus.textContent = 'No data';
-      connectStatus.className = 'status';
-      return;
-    }
-    connectStatus.textContent = 'Online';
-    connectStatus.className = 'status safe';
-
-    const lat = typeof data.latitude === 'number' ? data.latitude : defaultLat;
-    const lng = typeof data.longitude === 'number' ? data.longitude : defaultLng;
-    const rawDist = typeof data.distance === 'number' ? data.distance : -1;
-
-    // treat invalid as safe (—)
-    const distance = (rawDist < 0 || rawDist > 500) ? -1 : rawDist;
-
-    // move marker smoothly
-    marker.setLatLng([lat, lng]);
-    map.panTo([lat, lng], {animate:true, duration:0.5});
-    // update path
-    path.push([lat, lng]);
-    if (path.length > 300) path.shift();
-    line.setLatLngs(path);
-
-    // update UI
-    latlngEl.textContent = `${lat.toFixed(6)}, ${lng.toFixed(6)}`;
-    lastUpdateEl.textContent = new Date().toLocaleString();
-    distanceEl.textContent = distance < 0 ? '—' : `${distance.toFixed(1)} cm`;
-
-    // status logic: same thresholds as device
-    if (distance < 0 || distance >= 150) {
-      alertBox.textContent = '✅ Safe';
-      alertBox.className = 'status safe';
-    } else if (distance >= 30 && distance < 150) {
-      alertBox.textContent = '🟡 Mild Warning';
-      alertBox.className = 'status warning';
-    } else if (distance < 30) {
-      alertBox.textContent = '🔴 SOS — Send Help!';
-      alertBox.className = 'status alert';
-      // optional: notify sound / vibration on client
-      try { navigator.vibrate && navigator.vibrate(300); } catch(e){}
-    }
-  });
-
-  // fix map display after load
-  setTimeout(()=>map.invalidateSize(), 200);
-  </script>
+  if(dist >= 150){
+    statusEl.textContent = "✅ Safe";
+    statusEl.className = "status-pill safe";
+  }else if(dist >= 30){
+    statusEl.textContent = "🟡 Mild Warning";
+    statusEl.className = "status-pill warning";
+  }else{
+    statusEl.textContent = "🔴 Danger Zone";
+    statusEl.className = "status-pill alert";
+  }
+});
+</script>
 </body>
 </html>
